修改的内容

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # BASE_KEYS=[""]
 THREADS_COUNT=1
-# PROXY_FILE=
 DELAY=25
 OUTPUT_FILE=output.txt
-OUTPUT_FORMAT={key} | {referral_count}
+SAVE_WIREGUARD_VARIABLES=true
+# (用于生成wireguard配置文件)：WARP+秘钥 | 推荐数(多少G流量) | WireGuard的PrivateKey | WireGuard的Address | WireGuard的PublicKey | PublicKey的Endpoint
+OUTPUT_FORMAT={key} | {referral_count} | {private_key} | {interface_addresses} | {peer_public_key} | {peer_endpoint}
