--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-aiodns~=3.1.1
-aiohttp~=3.9.1
-aiohttp-socks~=0.8.4
-loguru~=0.7.2
-pydantic~=2.5.2
-pydantic-settings~=2.1.0
-python-dotenv~=1.0.0
-typing_extensions~=4.8.0
-cryptography~=41.0.7
+aiohttp==3.9.1
+aiohttp_socks==0.8.4
+cryptography==41.0.7
+loguru==0.7.2
+pydantic==2.6.4
+pydantic_settings==2.2.1
